# nano-vllm

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  bench.py  bench_online.py  benchmark.py  pyproject.toml  setup.py
.workflow/: README.md
benchmarks/: __init__.py  cli.py  inprocess.py  load_generator.py  metrics.py  models.py  mtp_benchmark_report.md  offline.py  online.py  reporter.py  sweep.py  telemetry.py  workloads.py
csrc/: bindings.cpp  w4_gemm.cu
docs/: README.md  TASKS.md
nanovllm/: __init__.py  config.py  sampling_params.py
results/: mtp-budget-i128-o32-r16-b128.json  mtp-budget-i128-o32-r16-b256.json  mtp-budget-i128-o32-r16-b512.json  mtp-steady-i128-o64-r32-b256.json
tests/: test_api_server.py  test_batch_planner.py  test_cudagraph_dispatcher.py  test_data_parallel_engine.py  test_delta_state_capacity.py  test_deltanet.py  test_deltanet_chunk.py  test_deltanet_packed.py  test_dspark_calibration.py  test_engine_client.py  test_forward_context.py  test_fp8_delta_state.py  test_fp8_kv_cache.py  test_goodput_benchmark.py  test_gptq_config.py  test_gptq_kernel.py  test_gptq_loader.py  test_gptq_native.py  test_gptq_reference.py  test_hybrid_state_manager.py  test_kv_capacity.py  test_mtp_loader.py  test_mtp_proposer.py  test_online_benchmark.py  test_piecewise_padding.py  test_public_entrypoints.py  test_qwen3_5.py  test_sampler.py  test_scheduler_abort.py  test_speculative_sampling.py  test_speculative_scheduler.py  test_speculative_step.py  test_step_metrics.py  test_structure_harness.py  test_tokenizer.py
tools/: bench_deltanet.py  bench_gpu.ps1  (+19 more)
(+217 files in other folders)
