[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-vllm"
version = "0.2.0"
authors = [{ name = "Xingkai Yu" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "a lightweight vLLM implementation built from scratch"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4.0",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    "flash-attn",
    "xxhash",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pyzmq>=26.0.0",
]
test = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
nano-vllm-serve = "nanovllm.serve.api_server:main"

[project.urls]
Homepage="https://github.com/GeeeekExplorer/nano-vllm"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanovllm*"]
